# lmdeploy

./: CMakeLists.txt
.github/workflows/: cuda12.1-whl-release.yml  daily-build.yml  lint.yml  linux-x64-gpu.yml  pypi.yml  windows-x64-gpu.yml
benchmark/: profile_throughput.py
builder/manywheel/: build_wheel.sh
lmdeploy/: api.py  messages.py  model.py  utils.py
lmdeploy/cli/: serve.py  utils.py
lmdeploy/lite/apis/: auto_awq.py  calibrate.py
lmdeploy/lite/utils/: load.py
lmdeploy/pytorch/: config.py  messages.py
lmdeploy/pytorch/engine/: cache_engine.py  engine.py  engine_instance.py  model_agent.py
lmdeploy/pytorch/engine/executor/: ray_executor.py
lmdeploy/serve/: async_engine.py  tokenization.py  utils.py
lmdeploy/serve/openai/: api_server.py  protocol.py
lmdeploy/serve/proxy/: constants.py  proxy.py
lmdeploy/turbomind/: supported_models.py  turbomind.py  utils.py
lmdeploy/turbomind/deploy/: config.py  loader.py  module.py
lmdeploy/turbomind/deploy/source_model/: __init__.py  internlm2.py  internlm3.py  llama.py  qwen.py
lmdeploy/turbomind/deploy/target_model/: base.py
lmdeploy/vl/: templates.py
lmdeploy/vl/model/: xcomposer2.py
src/turbomind/: turbomind.cc
src/turbomind/comm/: device_comm.h
src/turbomind/comm/cuda_ipc/: CMakeLists.txt  a2a_combine.cu  a2a_dispatch.cu  cuda_ipc_comm.h  reduce_scatter.cu
src/turbomind/comm/gloo/: CMakeLists.txt  gloo_comm.cc
src/turbomind/comm/nccl/: nccl.cu  nccl_ep.cu
src/turbomind/core/: allocator.cc  layout.h
src/turbomind/kernels/decoder_masked_multihead_attention/: decoder_masked_multihead_attention_128.cu  decoder_masked_multihead_attention_template.cuh
src/turbomind/kernels/gemm/: moe_a2a_utils.cu  moe_a2a_utils.h  moe_utils_v2.cu  moe_utils_v2.h
src/turbomind/models/llama/: BlockManager.cc  CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaDecoderLayerWeight.cc  LlamaDecoderLayerWeight.h  LlamaDecoderSelfAttentionLayer.cc  LlamaDenseWeight.h  LlamaLinear.cu  LlamaV2.cc  LlamaV2.h  LlamaWeight.cc  LlamaWeight.h  SequenceManager.cc  llama_kernels.cu  llama_kernels.h  llama_params.h  (+6 more)
src/turbomind/python/: CMakeLists.txt  bind.cpp  test_moe.cc  test_moe.py
src/turbomind/utils/: memory_utils.cu
(+3 files in other folders)
